# re_svg

./: CHANGELOG.md  pubspec.yaml
android/: build.gradle
lib/: re_svg.dart  resvg_bindings_generated.dart  resvg_ffi.dart
linux/: CMakeLists.txt
